--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div class='individual-container'>
-                <h3 class='team-title'>GUEST</h3>
+                <h3 class='team-title'>AWAY</h3>
                 <div>
                     <h4 id='guestScore-el'>0</h4>
                 </div>
